Fixed cursor not showing

--- a/src/layouts/cursor.css
+++ b/src/layouts/cursor.css
@@ -68,17 +68,8 @@
     opacity: 1;
   }
 
-@media (hover: none) and (pointer: coarse) {
-  #trailer {
-    display: none; /* Hide custom cursor on touch devices */
-  }
 
-  .interactable {
-    cursor: pointer; /* Use default touch behavior */
-  }
-}
-
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 800px) {
   #trailer {
     display: none; /* Hide custom cursor on touch devices */
   }
